# plaincloak-py

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: quickstart.ipynb
scripts/: sync_vectors.py
src/plaincloak/: __init__.py  __main__.py  api.py  exceptions.py  types.py
src/plaincloak/cli/: _io.py  cmd_decrypt.py  cmd_encrypt.py  cmd_inspect.py  cmd_keygen.py  cmd_keystore.py  cmd_qr.py  main.py
src/plaincloak/core/: base62.py  body.py  canonical.py  compression.py  constants.py  envelope.py  keys.py  keystore.py  qr.py
src/plaincloak/core/suites/: __init__.py  base.py  rsa_oaep_aes256gcm_sha256.py  rsa_oaep_sha256.py
tests/: conftest.py
tests/conformance/: runner.py  test_vectors.py
tests/integration/: test_module_entry.py  test_outcomes.py  test_roundtrip_direct.py  test_roundtrip_hybrid.py
tests/unit/: test_base62.py  test_body_validation.py  test_canonical.py  test_cli.py  test_compression_budget.py  test_consumer_limits.py  test_envelope_parse.py  test_exceptions.py  test_key_hash.py  test_key_validation.py  test_keystore.py  test_qr.py
