[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "plaincloak"
dynamic = ["version"]
description = "PlainCloak v1 reference implementation: text-safe authenticated public-key encryption."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "PlainCloak contributors" },
]
keywords = ["cryptography", "encryption", "rsa", "signing", "plaincloak"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42,<46",
    "brotli>=1.1.0,<2",
    "jsonschema>=4.21,<5",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
keystore = ["argon2-cffi>=23,<26"]
qr = [
    "qrcode>=7.4,<9",
    "pillow>=10,<12",
    "pyzbar>=0.1.9,<0.2",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "mypy>=1.10",
    "ruff",
    "types-jsonschema",
]

[project.scripts]
plaincloak = "plaincloak.cli.main:app"

[project.urls]
Homepage = "https://github.com/PlainCloak/plaincloak-py"
Source = "https://github.com/PlainCloak/plaincloak-py"
Issues = "https://github.com/PlainCloak/plaincloak-py/issues"

[tool.hatch.version]
path = "src/plaincloak/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plaincloak"]

[tool.hatch.build.targets.wheel.force-include]
"src/plaincloak/core/schemas" = "plaincloak/core/schemas"

[tool.hatch.build.targets.sdist]
include = [
    "src/plaincloak",
    "tests",
    "scripts",
    "README.md",
    "CHANGELOG.md",
    "CONFORMANCE.md",
    "LICENSE",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/plaincloak"]

[[tool.mypy.overrides]]
module = "brotli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qrcode.*", "pyzbar.*", "PIL.*"]
ignore_missing_imports = true
